# poland-gov-numbers

./: LICENSE  README.md  poland-gov-numbers.cabal
src/Data/: Poland.hs
src/Data/Poland/: KRS.hs  NIP.hs  PESEL.hs  REGON.hs
src/Data/Poland/Internal/: Parse.hs
test/: Spec.hs
