name:                poland-gov-numbers
version:             0.1.0.1
synopsis:            Poland Government Registry Numbers
description:         Please see README.md
homepage:            https://github.com/superduper/poland-gov-numbers#readme
license:             BSD3
license-file:        LICENSE
author:              Viktor Miroshnikov
maintainer:          me@vmiroshnikov.com
copyright:           2016 Viktor Miroshnikov
category:            Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Poland
                     , Data.Poland.KRS
                     , Data.Poland.NIP
                     , Data.Poland.REGON
                     , Data.Poland.PESEL
  other-modules:       Data.Poland.Internal.Parse
  build-depends:       base >= 4.7 && < 5
                     , random
                     , parsec
                     , time
  default-language:    Haskell2010

test-suite poland-gov-numbers-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , poland-gov-numbers
                     , transformers
                     , hspec
                     , time
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/superduper/poland-gov-numbers
